--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 		<meta charset="utf-8">
 		
 		<title>project 8</title>
+		<link rel="icon" type="image/x-icon" href="images/fav.png">
 		
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 
 		<link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-arial/css/bpg-arial.min.css">
+
+		<script src="https://kit.fontawesome.com/110784ff4a.js" crossorigin="anonymous"></script>
 
 
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -101,6 +104,15 @@
 			</div>
 			
 		</section>
+
+		<footer>
+			<div class="container"> 
+			
+				<i class="fa-brands fa-square-instagram fa-beat-fade" style="color: #d520c6;"></i>
+				<i class="fa-brands fa-facebook fa-bounce" style="color: #4618ec;"></i>
+				<i class="fa-brands fa-facebook-messenger fa-flip" style="color: #4618ec;"></i>
+			</div>
+		</footer>
 
 
 	</body>
